src/test/testData/tryCatch.kt
fun main(args: Array<String>) {
    <error descr="Make me?">throw RuntimeException()</error>
}